<resources>
    <string name="app_name">ContactsProject</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_number">Enter Number</string>
    <string name="add">ADD</string>
    <string name="find">FIND</string>
    <string name="asc">ASC</string>
    <string name="desc">DESC</string>
    <string name="delete_icon">Delete</string>
    <string name="contactId">ID</string>
</resources>